fix bottom alignment of nested comments

--- a/sass/modules/_comment.scss
+++ b/sass/modules/_comment.scss
@@ -11,7 +11,7 @@
   &__children {
     position: relative;
     right: -.625em;
-    bottom: -1.625em;
+    bottom: -.625em;
     /*bottom: -.625em;*/
   }
     
